--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.examples</groupId>
     <artifactId>git-release</artifactId>
-    <version>1.0.0.0-SNAPSHOT</version>
+    <version>1.0.0.0</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -34,7 +34,24 @@
                 <artifactId>gitflow-maven-plugin</artifactId>
                 <version>1.14.0</version>
                 <configuration>
-                    <!-- optional configuration -->
+                    <mvnExecutable>path_to_maven_executable</mvnExecutable>
+                    <gitExecutable>path_to_git_executable</gitExecutable>
+
+                    <installProject>false</installProject>
+                    <verbose>false</verbose>
+
+                    <gitFlowConfig>
+                        <productionBranch>master</productionBranch>
+                        <developmentBranch>develop</developmentBranch>
+                        <featureBranchPrefix>feature_</featureBranchPrefix>
+                        <releaseBranchPrefix>release_</releaseBranchPrefix>
+                        <hotfixBranchPrefix>hotfix_</hotfixBranchPrefix>
+                        <origin>origin</origin>
+                    </gitFlowConfig>
+
+                    <commitMessages>
+                        <!-- since 1.2.1, see Customizing commit messages -->
+                    </commitMessages>
                 </configuration>
             </plugin>
         </plugins>
