--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.examples</groupId>
     <artifactId>git-release</artifactId>
-    <version>1.0.0.7</version>
+    <version>1.0.0.8-SNAPSHOT</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
